# hpp-util

./: .git-blame-ignore-revs  .gitlab-ci.yml  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  NEWS  README.md  default.nix  flake.nix  package.xml  pyproject.toml
.github/workflows/: nix.yml
doc/: Doxyfile.extra.in
include/hpp/: util.hh
include/hpp/util/: assertion.hh  debug.hh  doc.hh  exception-factory.hh  exception.hh  indent.hh  parser.hh  pointer.hh  serialization-fwd.hh  serialization.hh  string.hh  timer.hh  version.hh
include/hpp/util/factories/: ignoretag.hh  sequence.hh
src/: CMakeLists.txt  debug.cc  exception.cc  indent.cc  parser.cc  timer.cc  version.cc
src/factories/: sequence.cc
tests/: CMakeLists.txt  Dockerfile.12  Dockerfile.14  Dockerfile.16  assertion.cc  common.hh  debug.cc  exception-factory.cc  exception.cc  run_debug.sh.in  serialization-test.cc  serialization.cc  serialization.hh  simple-test.cc  string.cc  timer.cc
